# VRLive-Server

./: .gitignore  Cargo.toml  LICENSE.md  README.md
osc_parser/: Cargo.toml
osc_parser/src/: lib.rs
osc_parser/tests/: bindings.rs
protocol/: Cargo.toml
protocol/src/: backing_track.rs  gst.rs  handshake.rs  heartbeat.rs  lib.rs  osc_messages.rs  osc_messages_in.rs  osc_messages_out.rs  rtp.rs  synchronizer.rs  vrl_packet.rs  vrl_tcp_packet.rs  vrm_packet.rs
server/: Cargo.toml
server/src/: analytics.rs  audience.rs  client.rs  lib.rs  performance.rs  performer.rs  server.rs
server/src/client/: audience.rs  peer_connection.rs  performer.rs  streaming.rs  synchronizer.rs
server/src/client/streaming/: braindead_simple_rtp.rs  peer_connection.rs
src/: main.rs
utils/: opus_streamer.py  sample_server.py
