[workspace]

members = ["protocol", "server"]
default-members = ["protocol"]

[package]
name = "vrlive-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rosc = "~0.10"
clap = { version = "4.4.18", features = ["derive"] }
server = { path = "server"}
protocol = { path = "protocol"}
tokio = "1.36.0"
log = "~0.4.20"
simplelog = "0.12.1"
crossterm = "0.27.0"
ratatui = { version = "0.26.0", features = ["all-widgets"]}
#env_logger = "~0.11.2"
#gstreamer = "~0.22.1"