[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rosc = "~0.10"
tokio = { version="1.36.0",features=["full"] }
serde_json = "~1.0"
serde = { version = "1.0", features = ["derive"] }
log = "~0.4.20"
reqwest = "~0.11.24"
webrtc = "~0.9.0"
bytes = "~1.5.0"
# requires cmake
#opus = "~0.3.0"  # OF COURSE this is by spacemaniac. Why wouldn't it be.
#gstreamer = "~0.22.1"
anyhow = "1.0.80"