[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol = { path = "../protocol"}
tokio = { version="1.36.0",features=["full"] }
serde_json = "~1.0"
serde = { version = "1.0", features = ["derive"] }
log = "~0.4.20"
rosc = "~0.10"
bytes = "~1.5.0"
async-trait = "0.1.77"